fix nav menu hover and mobile alignment

--- a/mo-portfolio/styles/globals.css
+++ b/mo-portfolio/styles/globals.css
@@ -53,24 +53,58 @@ header {
   visibility: hidden;
 }
 
-.nav-bar__menu-list>ul {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  margin: 0;
-}
 
-.nav-bar__menu-list>ul>li {
-  padding: 1rem;
+/* Nav bar item animation */
+
+.nav-bar__menu-list ul {
   list-style: none;
+  text-align: center;
 }
 
-.nav-bar__item {
-  color: #69663a !important;
+.nav-bar__menu-list ul li {
+  display: inline-block;
 }
 
-.nav-bar__item:hover {
-  color: #f9f3e5 !important;
+.nav-bar__menu-list ul li a {
+  display: block;
+  padding: 2rem;
+  color: #f9f3e5;
+  margin: 0 .5rem;
+}
+
+.nav-bar__menu-list ul li a,
+.nav-bar__menu-list ul li a:after,
+.nav-bar__menu-list ul li a:before {
+  transition: all .5s;
+}
+
+.nav-bar__menu-list ul li a {
+  position: relative;
+  z-index: 1;
+}
+
+.nav-bar__menu-list ul li a:after {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
+  height: 1px;
+  content: '.';
+  color: transparent;
+  background: #69663a;
+  visibility: none;
+  opacity: 0;
+  z-index: -1;
+}
+
+.nav-bar__menu-list ul li a:hover:after {
+  opacity: 1;
+  visibility: visible;
+  height: 100%;
 }
 
 .nav-bar__name-logo {
@@ -710,6 +744,7 @@ textarea {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-right: 1rem;
   }
 
   .line {
